--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="col-xs-12">
 				<div class="about-content">
 					<h2 class="about-content__header" >About me</h2>					
-					<img src="img/DSC_1110.jpg" alt="" class="about-content__foto">
+					<img src="img/DSC_1110.JPG" alt="" class="about-content__foto">
 					<h3 class="about-content__hi-message">Hi! My name is Sergey Odynets and I'm UI designer.</h3>
 					<div class="about-content__line"></div>
 					<p class="about-content__text">
