--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Portfolio</title>
 	<meta charset="UTF-8">	
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/flexboxgrid.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
