--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container-fluid">
 		<div class="row header">
-			<div class="col-xs-12">
+			<div class="col-xs-12 col-lg-12">
 				<div class="gamburger">
 					<a name="home"></a>
 					<input type="checkbox" id="symbol" class="gamburger__checkbox">
@@ -69,7 +69,7 @@
 		</div>
 		<div class="row about">
 			<a name="about"></a>
-			<div class="col-xs-12">
+			<div class="col-xs-12 col-lg-12">
 				<div class="about-content">
 					<h2 class="about-content__header" >About me</h2>					
 					<img src="img/DSC_1110.JPG" alt="" class="about-content__foto">
@@ -85,9 +85,10 @@
 		</div>
 		<div class="row works">
 			<a name="works"></a>
-			<div class="col-xs-12">
+			<div class="col-xs-12 col-lg-12">
 				<div class="works-content">
 					<h2 class="works-content__header" >My works</h2>
+					
 					<div class="pop-up-container">
 						<input type="checkbox" id="pop-btn" class="pop-check">
 						<label for="pop-btn" class="pop-btn"></label>
