--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		</div>
 		<div class="row contacts">
 			<a name="contacts"></a>
-			<div class="col-xs-12">
+			<div class="col-xs-12 col-lg-12">
 				<div class="contacts-container contacts-container__align">
 					<h2 class="contacts-container__top-header">Contacts</h2>
 					<p class="contacts-container__text">
@@ -201,9 +201,9 @@
 					</p>
 					<h3 class="contacts-container__send-message-header">leave me a message</h3>
 					<form action="" class="contact-form">
-						<input type="text" name="username" class="contact-form__username" placeholder="Your name">
-						<input type="text" name="usermail" class="contact-form__usermail" placeholder="Your email">
-						<textarea name="message" id="" cols="30" rows="10" class="contact-form__message" placeholder="Your message"></textarea>
+						<input type="text" name="username" class="contact-form__username" placeholder="Your name" required>
+						<input type="email" name="usermail" class="contact-form__usermail" placeholder="Your email" required>
+						<textarea name="message" id="" cols="30" rows="10" class="contact-form__message" placeholder="Your message" required></textarea>
 						<input type="submit" name="submit-button" value="Send message" class="contact-form__submit">
 					</form>
 					<h3 class="contacts-container__social-header">Or reach me via socials</h3>
@@ -222,3 +222,5 @@
 	</div>
 </body>
 </html>
+
+#47e339
