--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
 					</form>
 					<h3 class="contacts-container__social-header">Or reach me via socials</h3>
 					<div class="social-icons">
-						<div class="social-icons__item  social-icons__item_facebook"></div>
-						<div class="social-icons__item  social-icons__item_twitter"></div>
-						<div class="social-icons__item  social-icons__item_skype"></div>
-						<div class="social-icons__item  social-icons__item_linked"></div>
-						<div class="social-icons__item  social-icons__item_github"></div>
-						<div class="social-icons__item  social-icons__item_google"></div>
-						<p class="copyrights">Copyright © 2017 Sergey Odynets</p>
+						<a href="https://www.facebook.com/marikhuana.gnom" class="social-icons__item  social-icons__item_facebook" target="_blank"></a>
+						<a href="https://twitter.com/Hildenmask" class="social-icons__item  social-icons__item_twitter" target="_blank"></a>
+						<a href="skype:dn201287osa" class="social-icons__item  social-icons__item_skype" target="_blank"></a>
+						<a href="https://www.linkedin.com/in/odynets-serhei-9973b072/" class="social-icons__item  social-icons__item_linked" target="_blank"></a>
+						<a href="https://arrivle.github.io" class="social-icons__item  social-icons__item_github" target="_blank"></a>
+						<a href="https://plus.google.com/u/0/116200987549986458344" class="social-icons__item  social-icons__item_google" target="_blank"></a>
+						<p href="" class="copyrights">Copyright © 2017 Sergey Odynets</p>
 						
 					</div>
 				</div>
