--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 					<cite class="clever-words">
 						UI disigner - it's an artist in the digital world. He creates doors to the worlds of human imagination and byte chaos.
 					</cite>		
-					<a href="#about" class="header-button">Read more</a>							
+					<a href="#about" class="header-button">Read more</a>	
+					<a href="#home" class="up-btn"></a>						
 				</div>			
 			</div>
 		</div>
