--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container-fluid">
 		<div class="row header">
-			<div class="col-xs-12 col-lg-12 col-md-12">
+			<div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
 				<div class="gamburger">
 					<a name="home"></a>
 					<input type="checkbox" id="symbol" class="gamburger__checkbox">
@@ -70,7 +70,7 @@
 		</div>
 		<div class="row about">
 			<a name="about"></a>
-			<div class="col-xs-12 col-lg-12 col-md-12">
+			<div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
 				<div class="about-content">
 					<h2 class="about-content__header" >About me</h2>					
 					<img src="img/DSC_1110.JPG" alt="" class="about-content__foto">
@@ -86,7 +86,7 @@
 		</div>
 		<div class="row works">
 			<a name="works"></a>
-			<div class="col-xs-12 col-lg-12 col-md-12">
+			<div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
 				<div class="works-content">
 					<h2 class="works-content__header" >My works</h2>
 					
@@ -161,7 +161,7 @@
 		</div> 
 		<div class="row window">
 			<a name="skills"></a>
-			<div class="col-xs-12 col-md-12 col-lg-12">
+			<div class="col-xs-12 col-md-12 col-lg-12 col-sm-12">
 				<div class="window-content">
 					<div class="window-content__background">
 						<div class="window-content__upper">
@@ -194,7 +194,7 @@
 		</div>
 		<div class="row contacts">
 			<a name="contacts"></a>
-			<div class="col-xs-12 col-lg-12 col-md-12">
+			<div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
 				<div class="contacts-container contacts-container__align">
 					<h2 class="contacts-container__top-header">Contacts</h2>
 					<p class="contacts-container__text">
